Fix for mini icon alignment and search option style issues

--- a/apps/publisher/themes/default/css/custom-theme.css
+++ b/apps/publisher/themes/default/css/custom-theme.css
@@ -288,7 +288,7 @@ a.ctrl-filter-category:hover {
 }
 .ast-img .ast-type-icon i{
     font-size:2.2em;
-    padding:9px 2px;
+    padding:8px 2px;
 }
 .ast-desc {
     /*float:left;*/
